footer fixed for horizontal display on small devices Part-3

--- a/style.css
+++ b/style.css
@@ -145,10 +145,10 @@ a:hover {
 
 @media screen and (max-height: 574px) {
     #contact {
-        min-height: calc(49vh - 70px);
+        min-height: calc(45vh - 70px);
     }
 
     footer {
-        height: 51vh;
+        height: 55vh;
     }
 }
